testsuite/tests/typecheck/should_fail/tcfail215.hs
{-# LANGUAGE ImplicitParams, MagicHash #-}

module ShouldFail where

import GHC.Exts

-- As of GHC 7.4, we don't allow unlifted types in ImplicitParms
foo :: (?x :: Int#) => Int
foo = I# ?x
