testsuite/tests/typecheck/should_fail/tcfail215.stderr

tcfail215.hs:8:15: error:
    • Expected a lifted type, but ‘Int#’ is an IntRep type
    • In the type signature: foo :: (?x :: Int#) => Int
